comment some code for run this application